provider-aws/examples-generated/apigatewayv2/deployment.yaml
apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Deployment
metadata:
  labels:
    testing.upbound.io/example-name: example
  name: example
spec:
  forProvider:
    apiIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    description: Example deployment
    lifecycle: null
    region: us-west-1

---
