provider-aws/examples-generated/apigatewayv2/route.yaml
apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: example
spec:
  forProvider:
    apiId: ${aws_apigatewayv2_api.example.id}
    region: us-west-1
    routeKey: $default
